--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "start": "babel-node ./src/index.js",
     "watch": "nodemon ./src/index.js --exec babel-node",
-    "lint": "eslint --fix './**/*.js'",
+    "lint": "eslint --fix './**/*.js'"
   },
   "author": "",
   "license": "ISC",
