--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 MONGO_URI=mongodb+srv://challengeUser:WUMglwNBaydH8Yvu@challenge-xzwqd.mongodb.net/getir-case-study?retryWrites=true
-APP_PORT=5000
-APP_HOST=0.0.0.0
+PORT=5000
