--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "getir",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "babel-node ./src/index.js",
-    "watch": "nodemon ./src/index.js --exec babel-node",
+    "start": "babel-node ./index.js",
+    "watch": "nodemon ./index.js --exec babel-node",
     "lint": "eslint --fix './**/*.js'"
   },
   "author": "",
